Added the local Wiki QA

--- a/chad-api/lang/en_US.json
+++ b/chad-api/lang/en_US.json
@@ -4,5 +4,6 @@
     "try-different-keywords": "Maybe try different keywords?",
     "no-message": "The \"message\" header was not sent or was empty.",
     "invalid-message": "The message sent contains invalid characters such as Unicode characters. Please resend the message with only plaintext/ASCII characters.",
-    "no-weather": "Unable to find weather data for"
+    "no-weather": "Unable to find weather data for",
+    "cant-understand-question": "I'm sorry, I couldn't understand your question. Maybe try rephrasing it?"
 }
